--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,116 @@
+
+/* I LOVE THIS TRICK!! */
+* {
+  outline: red 1px solid;
+}
+
 body {
 	background-color: black;
 }
 
+.sf-logo {
+	background-image: url('../images/SF_Logo.png');
+	background-size: 600px;
+	width: 600px;
+	height: 600px;
+	background-repeat: no-repeat;
+	display: none;
+}
+
+.jquery-logo {
+	background-image: url('../images/jquery_Logo.png');
+	background-size: 600px;
+	width: 600px;
+	height: 600px;
+	background-repeat: no-repeat;
+	margin-top: 15%;
+	display: none;
+}
+
 /* class for the main section at the beginning of the body */
 .game-area {
-	background-color: white;
+	background: white;
 	min-width: 1200px;
 	min-height: 500px;
 	margin-top: 125px;
+	padding-left: 100px;
 	position: relative;
+	z-index: 1;
 	
 }
 
+.ryu-container, .ryu {
+    float: left;
+}
 
+/* Here are the images for the Ryu DIV tags. */
 .ryu-ready {
-	background-image: url('/images/ryu-ready-position.gif');
-	
+	background-image: url('../images/ryu-ready-position.gif');
+}
+.ryu-still {
+	background-image: url('../images/ryu-standing-still.png');
+	display: block;
+}
+.ryu-throwing {
+	background-image: url('../images/ryu-throwing-hadouken.png');
+}
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
+}
+
+/* Giving the Ryu images same sizing */
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
+	width: 659px;
+	height: 494px;
+}
+
+/* This will keep images hidden in default state. */
+.ryu-ready, .ryu-throwing, .ryu-cool {
+	display: none;
+}
+
+
+/* Making sure images stay contained .*/
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+  background-repeat: no-repeat;
+}
+
+.hadouken {
+	background-image: url('../images/hadouken.gif');
+	display: none;
+	width: 156px;
+    height: 90px;
+    position: relative;
+    top: 167px;
+    left: -212px;
+    z-index: 10;
+    float: left;
+}
+
+.text-container {
+	position: absolute;
+    left: 650px;
+    height: 425px;
+    width: 600px;
+    padding-top: 75px;
+
+}
+
+.game-rules {
+	display: block;
+	color: red;
+    font-family: 'Carter One', cursive;
+    font-size: 50px;
+    width: 600px;
+}
+.game-rules p {
+    width: 50%;
+    color: black;
+    font-size: 28px;
+    line-height: 45px;
+}
+
+/* HOW DOES THIS WORK? CAN WE DISCUSS?? */
+.game-rules p + p {
+	margin-left: 275px;
 }
