--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ body {
 }
 
 .jquery-logo {
-	background-image: url('../images/jquery_logo.png');
+	background-image: url('images/jquery_logo.png');
 	background-size: 600px;
 	width: 600px;
 	height: 317px;
