--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,16 @@
 
 
 /* I LOVE THIS TRICK!! */
-/* * {
+* {
   outline: red 1px solid;
-} */
+}
 
 body {
 	background-color: black;
 }
 
 .sf-logo {
-	background-image: url('../images/SF_Logo.png');
+	background-image: url('../images/SF_logo.png');
 	background-size: 600px;
 	width: 600px;
 	height: 317px;
