--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .sf-logo {
-	background-image: url('../images/SF_logo.png');
+	background-image: url('../images/sf_logo.png');
 	background-size: 600px;
 	width: 600px;
 	height: 317px;
